Tuning normalizedLink